Fix content visibility on mobile

--- a/themes/boc/assets/css/main.css
+++ b/themes/boc/assets/css/main.css
@@ -1090,7 +1090,7 @@ tr:hover {
 @media (max-width: 768px) {
     body {
         font-size: 14px;
-        padding-top: 80px;
+        padding-top: 120px;
     }
 
     .header-top {
